Fix close button alignment

--- a/src/styles/components/_Modal.scss
+++ b/src/styles/components/_Modal.scss
@@ -23,7 +23,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
   }
 
   .st-react-modal--description--text {
